--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./:/var/www/html:ro
     networks:
-      blackrook:
-        ipv4_address: 172.100.0.100
+      loopalikes:
+        ipv4_address: 172.125.0.100
 
   php:
     container_name: "loopalikes.php"
@@ -20,12 +20,28 @@ services:
     volumes:
       - ./:/var/www/html:ro
     networks:
-      blackrook:
-        ipv4_address: 172.100.0.105
+      loopalikes:
+        ipv4_address: 172.125.0.110
+
+  mongo:
+    container_name: "loopalikes.mongo"
+    image: mongo
+    volumes:
+      - loopalikes.mongo:/data/db:rw
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
+    networks:
+      loopalikes:
+        ipv4_address: 172.125.0.200
 
 networks:
-  blackrook:
-    name: blackrook
+  loopalikes:
+    name: loopalikes
     ipam:
       config:
-        - subnet: 172.100.0.0/24
+        - subnet: 172.125.0.0/24
+
+volumes:
+  loopalikes.mongo:
