add: mongodb php ext to local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   php:
     container_name: "loopalikes.php"
-    image: php:fpm-alpine
+    build: .
     volumes:
       - ./:/var/www/html:ro
     networks:
